# Reloaded.Hooks-rs

./: .gitmodules  404.html  CONTRIBUTING.MD  Cargo.toml  README.MD  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: pull_request_template.md
projects/reloaded-hooks-aarch64-sys/: Cargo.toml
projects/reloaded-hooks-aarch64-sys/.cargo/: config.toml
projects/reloaded-hooks-aarch64-sys/src/: all_registers.rs  calling_convention.rs  helpers.rs  jit.rs  length_disassembler.rs  lib.rs  rewriter.rs  test_helpers.rs
projects/reloaded-hooks-aarch64-sys/src/code_rewriter/: aarch64_rewriter.rs  adr.rs  b.rs  b_cond.rs  cbz.rs  generate_test_cases.ps1  helpers.rs  instruction_rewrite_result.rs  ldr_literal.rs  sample_instructions.txt  sample_instructions_bytes.txt  tbz.rs
projects/reloaded-hooks-aarch64-sys/src/code_rewriter/instructions/: adr.rs  b.rs  b_cond.rs  cbz.rs  ldr_literal.rs  tbz.rs
projects/reloaded-hooks-aarch64-sys/src/instructions/: add_immediate.rs  adr.rs  b.rs  bcc.rs  branch_register.rs  cbz.rs  errors.rs  ldp_immediate.rs  ldr_immediate_post_indexed.rs  ldr_immediate_unsigned_offset.rs  ldr_literal.rs  mov_immediate.rs  orr.rs  orr_vector.rs  stp_immediate.rs  str_immediate_pre_indexed.rs  sub_immediate.rs  tbz.rs
projects/reloaded-hooks-aarch64-sys/src/jit_instructions/: branch_absolute.rs  branch_ip_relative.rs  branch_relative.rs  jump_absolute_indirect.rs  load_pc_relative_address.rs  load_pc_relative_value.rs  mov.rs  mov_from_stack.rs  mov_two_from_stack.rs  multi_pop.rs  multi_push.rs  pop.rs  pop_two.rs  push.rs  push_constant.rs  push_stack.rs  push_two.rs  ret.rs  stackalloc.rs  xchg.rs
projects/reloaded-hooks-aarch64-sys/src/opcodes/: ldr_immediate_post_indexed.rs  ldr_immediate_unsigned_offset.rs
projects/reloaded-hooks-aarch64-sys/tests/: assembly_hook.rs  branch_hook.rs  branch_hook_fast.rs
projects/reloaded-hooks-aarch64-sys/tests/asm/: add_aarch64.asm  assemble_function.rs  calculator.rs  call_add_aarch64.asm
projects/reloaded-hooks-buffers-common/: Cargo.toml
projects/reloaded-hooks-buffers-common/benches/: my_benchmark.rs
projects/reloaded-hooks-buffers-common/src/: buffer.rs  buffer_factory.rs  hooks_buffers_error.rs  lib.rs  pointer_linked_buffer.rs  pointer_linked_buffer_factory.rs  static_linked_buffer.rs  static_linked_buffer_factory.rs
projects/reloaded-hooks-buffers-common/src/dynamic_link/: pointer_functions.rs
projects/reloaded-hooks-portable/: Cargo.toml  cobertura.xml  tarpaulin-report.html
projects/reloaded-hooks-portable/benches/: my_benchmark.rs  wrapper_instruction_generator.rs
projects/reloaded-hooks-portable/src/: lib.rs  move_optimiser.rs
projects/reloaded-hooks-portable/src/api/: calling_convention_info.rs  function_attribute.rs  function_info.rs  init.rs  wrapper_generator.rs  wrapper_instruction_generator.rs
projects/reloaded-hooks-portable/src/api/buffers/: buffer_abstractions.rs  default_buffer.rs  default_buffer_factory.rs
projects/reloaded-hooks-portable/src/api/errors/: assembly_hook_error.rs  fast_hook_error.rs  function_hook_error.rs  hook_builder_error.rs  inline_branch_error.rs  wrapper_generation_error.rs
projects/reloaded-hooks-portable/src/api/hooks/: common_hook.rs
projects/reloaded-hooks-portable/src/graph/: graph.rs  node.rs
projects/reloaded-hooks-portable/src/graphs/: graph.rs  node.rs
projects/reloaded-hooks-portable/src/helpers/: alignment_space_finder.rs  allocate_with_proximity.rs  atomic_write.rs  atomic_write_masked.rs  convention_converter_helpers.rs  icache_clear.rs  jit_jump_operation.rs  make_inline_rel_branch.rs  overwrite_code.rs  relative_branch_range_check.rs  test_helpers.rs
projects/reloaded-hooks-portable/src/internal/: assembly_hook.rs  basic_hook.rs  hook_builder.rs  hook_builder_settings.rs  stub_builder.rs  stub_builder_settings.rs
projects/reloaded-hooks-portable/src/optimize/: combine_push_operations.rs  decompose_push_pop_operations.rs  eliminate_common_callee_saved_registers.rs  merge_stackalloc_and_return.rs  merge_stackalloc_operations.rs  optimize_parameters_common.rs  optimize_push_pop_parameters.rs  optimize_reg_parameters.rs  optimize_stack_parameters.rs  reorder_mov_sequence.rs
projects/reloaded-hooks-portable/src/structs/: mov_operation.rs  move_operation.rs  operation.rs  pop_operation.rs  push_operation.rs  push_stack_operation.rs  sub_operation.rs  xchg_operation.rs
projects/reloaded-hooks-x86-sys/: Cargo.toml
projects/reloaded-hooks-x86-sys/benches/: assembler_bench_64.rs  my_benchmark.rs
projects/reloaded-hooks-x86-sys/benches/benchmarks/: assembler_bench_32.rs  assembler_bench_64.rs  assembly_hook_bench_64.rs  mod.rs
projects/reloaded-hooks-x86-sys/src/: all_registers.rs  jit.rs  jit_common.rs  jit_conversions_common.rs  lib.rs
projects/reloaded-hooks-x86-sys/src/attribute/: register.rs
projects/reloaded-hooks-x86-sys/src/common/: disasm.rs  jit_common.rs  jit_conversions_common.rs  traits.rs
projects/reloaded-hooks-x86-sys/src/instructions/: call_absolute.rs  call_ip_relative.rs  call_relative.rs  jump_absolute.rs  jump_absolute_indirect.rs  jump_ip_relative.rs  jump_relative.rs  macros.rs  mov.rs  mov_from_stack.rs  mov_to_stack.rs  multi_pop.rs  multi_push.rs  pop.rs  push.rs  push_const.rs  push_stack.rs  ret.rs  stack_alloc.rs  xchg.rs
projects/reloaded-hooks-x86-sys/src/instructions_zd/: push.rs
projects/reloaded-hooks-x86-sys/src/x64/: calling_convention.rs  jit.rs  length_disassembler.rs  register.rs  rewriter.rs
projects/reloaded-hooks-x86-sys/src/x86/: calling_convention.rs  jit.rs  length_disassembler.rs  preset_calling_convention.rs  register.rs  rewriter.rs
projects/reloaded-hooks-x86-sys/tests/: assembly_hook.rs  assembly_hook_32.rs  assembly_hook_64.rs  baseline.rs  branch_fast_hook_32.rs  branch_fast_hook_64.rs  branch_hook_32.rs  branch_hook_64.rs  wrapper_instruction_generator_32.rs  wrapper_instruction_generator_64.rs
projects/reloaded-hooks-x86-sys/tests/asm/: add_msft_x64.asm  add_x86.asm  assemble_function.rs  calculator.rs  call_add_msft_x64.asm  call_add_x86.asm  mod.rs
(+159 files in other folders)
