[package]
name = "reloaded-hooks-aarch64-sys"
version = "0.1.0"
edition = "2021"
description = "Components of reloaded-hooks that are specific to ARM64 (aarch64). This package is written in an OS agnostic way."
repository = "https://github.com/Reloaded-Project/reloaded-hooks"
license-file = "LICENSE"
include = ["src/**/*"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
smallvec = { version = "1.11.0", features = ["const_new"] }
reloaded-hooks-portable = { version = "0.1.0", path = "../reloaded-hooks-portable" }

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

# Dev Build
[profile.dev]
panic = "abort"

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
# [[bench]]
# name = "my_benchmark"
# harness = false
