[package]
name = "reloaded-hooks-buffers-common"
version = "0.1.0"
edition = "2021"
description = "Adds support for Targeted Memory Allocation & improved efficiency on Windows/Linux/macOS via Reloaded.Memory.Buffers."
repository = "https://github.com/Reloaded-Project/reloaded-hooks"
license-file = "LICENSE"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
smallvec = { version = "1.11.0", features = ["const_new"] }
reloaded-hooks-portable = { version = "0.1.0", path = "../reloaded-hooks-portable" }
reloaded-memory-buffers = "3.3.0"
thiserror-no-std = "2.0.2"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

# Dev Build
[profile.dev]
panic = "abort"

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"
