[package]
name = "reloaded-hooks-portable"
version = "0.1.0"
edition = "2021"
description = "Architecture agnostic components of reloaded-hooks that can be used to implement hooking in more than just x86."
repository = "https://github.com/Reloaded-Project/reloaded-hooks"
license-file = "LICENSE"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hashbrown = "0.14.0"
nohash = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

# Dev Build
[profile.dev]
panic = "abort"

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
harness = false
