[package]
name = "reloaded-hooks-x86-sys"
version = "0.1.0"
edition = "2021"
description = "Components of reloaded-hooks that are specific to x86 & x64. This package is written in an OS agnostic way."
repository = "https://github.com/Reloaded-Project/reloaded-hooks"
license-file = "LICENSE"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.147"
rstest = "0.18.2"
derive-enum-all-values = "0.1.0"
smallvec = { version = "1.11.0", features = ["const_new"] }
reloaded-hooks-portable = { version = "0.1.0", path = "../reloaded-hooks-portable" }
hex = "0.4.3"

[dependencies.iced-x86]
version = "1.20.0"
default-features = false
# See below for all features
features = ["no_std", "code_asm", "decoder", "block_encoder", "op_code_info", "instr_info"]

[dev-dependencies]
criterion = "0.5.1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

# Dev Build
[profile.dev]
panic = "abort"

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
harness = false
